updating docker-consul

--- a/systemd/docker-consul.service
+++ b/systemd/docker-consul.service
@@ -1,14 +1,13 @@
 [Unit]
-Description=Docker container haproxy service
+Description=Docker container consul service
 After=docker.service
 Requires=docker.service
 
 [Service]
 Restart=always
 EnvironmentFile=-/etc/default/docker-consul
-ExecStart=/usr/bin/docker run --name consul --bind=host $DOCKER_OPTS consul agent -bind=$BIND_IP
-ExecStop=/usr/bin/docker stop -t 2 haproxy; /usr/bin/docker rm haproxy
-ExecReload=/usr/bin/docker kill -s HUP haproxy
+ExecStart=/usr/bin/docker run --name consul --net=host $DOCKER_OPTS consul agent -ui
+ExecStop=/usr/bin/docker stop -t 2 consul; /usr/bin/docker rm consul
 
 [Install]
 WantedBy=multi-user.target
