--- a/systemd/consul-template.service
+++ b/systemd/consul-template.service
@@ -1,4 +1,4 @@
-Unit]
+[Unit]
 Description=consul-template
 Requires=network-online.target
 After=network-online.target docker-consul.service
@@ -7,7 +7,8 @@ After=network-online.target docker-consul.service
 EnvironmentFile=-/etc/default/consul-template
 Restart=always
 RestartSec=10
-ExecStart=/usr/local/bin/consul-template $OPTIONS -config=/etc/consul-template/config/
+ExecStart=/usr/local/bin/consul-template $OPTIONS -config=/etc/consul-template/config/haproxy.hcl
+KillSignal=SIGINT
  
 [Install]
 WantedBy=multi-user.target
